<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_header"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/back_gradient"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:layout_marginStart="28dp"
            android:fontFamily="@font/lexend_semibold"
            android:textSize="16sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Halo, Andrew!"/>

        <ImageView
            android:id="@+id/iv_avatar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toTopOf="@id/tv_greeting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_greeting"/>

        <SearchView
            android:id="@+id/sv_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/search_view_main"
            android:queryHint="Cari kafe terdekat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_header"
            app:layout_constraintBottom_toBottomOf="@id/fl_header"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_promotion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/sv_home"
            app:layout_constraintStart_toStartOf="@id/sv_home"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_recommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/recommendation_for_you"
            android:fontFamily="@font/lexend_semibold"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/rv_promotion"
            app:layout_constraintTop_toBottomOf="@id/rv_promotion"/>

        <TextView
            android:id="@+id/tv_see_all_recommendation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:text="@string/see_al"
            android:textColor="@color/gray_100"
            android:fontFamily="@font/lexend"
            app:layout_constraintTop_toTopOf="@id/tv_recommendation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_recommendation"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recommendation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_recommendation"
            app:layout_constraintStart_toStartOf="@id/tv_recommendation"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_closest_cafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/closest_cafe"
            android:fontFamily="@font/lexend_semibold"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/rv_recommendation"
            app:layout_constraintStart_toStartOf="@id/rv_recommendation"/>

        <TextView
            android:id="@+id/tv_see_all_closest_cafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:text="@string/see_al"
            android:textColor="@color/gray_100"
            android:fontFamily="@font/lexend"
            app:layout_constraintTop_toTopOf="@id/tv_closest_cafe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_closest_cafe"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_closest_cafe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintStart_toStartOf="@id/tv_closest_cafe"
            app:layout_constraintEnd_toEndOf="@id/tv_see_all_closest_cafe"
            app:layout_constraintTop_toBottomOf="@id/tv_closest_cafe"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>